Draw centroids of large blobs, add video selector

--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
 			canvas,
 			video {
 				display: block;
+				width: 100%;
+				max-width: 100%;
 			}
 		</style>
 	</head>
 	<body>
 		<div class="container">
 			<button id="start-button">Start</button>
+			<select id="video-select"></select>
 			<canvas
 				id="canny"
 				width="256"
