--- a/index.html
+++ b/index.html
@@ -11,25 +11,29 @@
 				margin: 0;
 				padding: 32px;
 			}
+			.io {
+				line-height: 0;
+				font-size: 0;
+			}
 			canvas,
 			video {
-				display: block;
-				width: 100%;
-				max-width: 100%;
+				background-color: #000;
+				display: inline-block;
+				width: 50%;
+				max-width: 50%;
 			}
 		</style>
 	</head>
 	<body>
 		<div class="container">
-			<button id="start-button">Start</button>
-			<select id="video-select"></select>
-			<canvas
-				id="canny"
-				width="256"
-				height="256"
-				style="border: 1px solid #666"
-			></canvas>
-			<video id="blobby" autoplay loop src="video_source.mp4"></video>
+			<div>
+				<button id="start-button">Start</button>
+				<select id="video-select"></select>
+			</div>
+			<div class="io">
+				<canvas id="canny" width="256" height="256"></canvas>
+				<video id="blobby" autoplay loop src="video_source.mp4"></video>
+			</div>
 		</div>
 		<script src="index.js"></script>
 	</body>
