--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
 				width: 50%;
 				max-width: 50%;
 			}
+			@media (max-width: 640px) {
+				canvas,
+				video {
+					width: 100%;
+					max-width: 100%;
+				}
+			}
 		</style>
 	</head>
 	<body>
